[package]
name = "mcping"
version = "0.1.0"
authors = ["Exopteron <exopteron@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = { version = "*", features = ["dns-over-rustls"] }
log = "0.4.1"
env_logger = "0.9.0"
rust-minecraft-networking = { git = "https://github.com/Exopteron/rust-minecraft-networking", branch = "main" }
structopt = "0.3.2"
serde_json = "^1.0.59"
serde = { version = "1.0", features = ["derive"] }
colored_json = "2.1.0"